Fix profile picture loading issue and timeline alignment
- Added missing profile picture files to repository
- Reverted timeline CSS to working version with proper padding-based positioning
- Fixed alignment issues with timeline items

--- a/styles.css
+++ b/styles.css
@@ -323,25 +323,14 @@ body {
 }
 
 .timeline-item:nth-child(odd) {
-    float: left;
-    clear: left;
-    width: calc(50% - 2rem);
-    margin-right: 2rem;
-    text-align: right;
-}
-
-.timeline-item:nth-child(even) {
-    float: right;
-    clear: right;
-    width: calc(50% - 2rem);
-    margin-left: 2rem;
+    padding-right: calc(50% + 2rem);
+    padding-left: 2rem;
     text-align: left;
 }
 
-.timeline-item::after {
-    content: "";
-    display: table;
-    clear: both;
+.timeline-item:nth-child(even) {
+    padding-left: calc(50% + 2rem);
+    text-align: left;
 }
 
 .timeline-date {
